include/tacuda.h

typedef enum ctStatus {
  CT_STATUS_SUCCESS = 0,
  CT_STATUS_ALLOC_FAILED = 1,
  CT_STATUS_COPY_FAILED = 2,
  CT_STATUS_KERNEL_FAILED = 3,
} ctStatus_t;
CTAPI_EXPORT ctStatus_t ct_cdl_rise_fall3_methods(const float *host_open,
                                                  const float *host_high,
                                                  const float *host_low,
                                                  const float *host_close,
                                                  float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_separating_lines(const float *host_open,
                                                const float *host_high,
                                                const float *host_low,
                                                const float *host_close,
                                                float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_shooting_star(const float *host_open,
                                             const float *host_high,
                                             const float *host_low,
                                             const float *host_close,
                                             float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_short_line(const float *host_open,
                                          const float *host_high,
                                          const float *host_low,
                                          const float *host_close,
                                          float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_spinning_top(const float *host_open,
                                            const float *host_high,
                                            const float *host_low,
                                            const float *host_close,
                                            float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_stalled_pattern(const float *host_open,
                                               const float *host_high,
                                               const float *host_low,
                                               const float *host_close,
                                               float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_stick_sandwich(const float *host_open,
                                              const float *host_high,
                                              const float *host_low,
                                              const float *host_close,
                                              float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_takuri(const float *host_open,
                                      const float *host_high,
                                      const float *host_low,
                                      const float *host_close,
                                      float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_tasuki_gap(const float *host_open,
                                          const float *host_high,
                                          const float *host_low,
                                          const float *host_close,
                                          float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_thrusting(const float *host_open,
                                         const float *host_high,
                                         const float *host_low,
                                         const float *host_close,
                                         float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_tristar(const float *host_open,
                                       const float *host_high,
                                       const float *host_low,
                                       const float *host_close,
                                       float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_unique_3_river(const float *host_open,
                                              const float *host_high,
                                              const float *host_low,
                                              const float *host_close,
                                              float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_upside_gap_2_crows(const float *host_open,
                                                  const float *host_high,
                                                  const float *host_low,
                                                  const float *host_close,
                                                  float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_xside_gap_3_methods(
    const float *host_open, const float *host_high, const float *host_low,
    const float *host_close, float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cmo(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_correl(const float *host_x, const float *host_y,
                                  float *host_output, int size, int period);
CTAPI_EXPORT ctStatus_t ct_dx(const float *host_high, const float *host_low,
                              const float *host_close, float *host_output,
                              int size, int period);
CTAPI_EXPORT ctStatus_t ct_linearreg(const float *host_input,
                                     float *host_output, int size, int period);
CTAPI_EXPORT ctStatus_t ct_linearreg_slope(const float *host_input,
                                           float *host_output, int size,
                                           int period);
CTAPI_EXPORT ctStatus_t ct_linearreg_intercept(const float *host_input,
                                               float *host_output, int size,
                                               int period);
CTAPI_EXPORT ctStatus_t ct_linearreg_angle(const float *host_input,
                                           float *host_output, int size,
                                           int period);
CTAPI_EXPORT ctStatus_t ct_tsf(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_ht_dcperiod(const float *host_input,
                                       float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_ht_dcphase(const float *host_input,
                                      float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_ht_phasor(const float *host_input,
                                     float *host_inphase,
                                     float *host_quadrature, int size);
CTAPI_EXPORT ctStatus_t ct_ht_sine(const float *host_input, float *host_sine,
                                   float *host_leadsine, int size);
CTAPI_EXPORT ctStatus_t ct_ht_trendline(const float *host_input,
                                        float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_ht_trendmode(const float *host_input,
                                        float *host_output, int size);