bindings/csharp/Tacuda.Generated.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_rise_fall3_methods(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_separating_lines(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_shooting_star(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_short_line(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_spinning_top(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_stalled_pattern(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_stick_sandwich(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_takuri(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_tasuki_gap(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_thrusting(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_tristar(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_unique_3_river(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_upside_gap_2_crows(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_xside_gap_3_methods(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cmo(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_correl(float[] host_x, float[] host_y, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_dx(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_linearreg(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_linearreg_slope(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_linearreg_intercept(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_linearreg_angle(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_tsf(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ht_dcperiod(float[] host_input, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ht_dcphase(float[] host_input, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ht_phasor(float[] host_input, float[] host_inphase, float[] host_quadrature, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ht_sine(float[] host_input, float[] host_sine, float[] host_leadsine, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ht_trendline(float[] host_input, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ht_trendmode(float[] host_input, float[] host_output, int size, IntPtr stream = default);

}

